--- a/src/todo1/list-empty.html
+++ b/src/todo1/list-empty.html
@@ -23,24 +23,7 @@
 				<button type="submit" class="btn btn-primary">CREATE</button>
 			</form>
 			<div class="todo-list-wrapper">
-				<ul>
-					<li>
-						<input class="form-checkbox" type="checkbox" name="isDone" value="1" />
-						<span>Test 1</span>
-						<a href="detail.html" data-discover="true">Detail</a>
-					</li>
-					<li>
-						<input
-							class="form-checkbox"
-							type="checkbox"
-							name="isDone"
-							value="2"
-							checked
-						/>
-						<span>Test 2</span>
-						<a href="detail.html" data-discover="true">Detail</a>
-					</li>
-				</ul>
+				<div class="empty-data">Empty Data</div>
 			</div>
 		</div>
 		<script src="@src/todo1/js/main.js" defer="defer"></script>
