--- a/src/todo2/index.html
+++ b/src/todo2/index.html
@@ -1,13 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link href="@src/todo2/css/main.css" rel="stylesheet">
-</head>
-<body>
-    <h1>Todo2</h1>
-    <script src="@src/todo2/js/main.js" defer="defer"></script>
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Document</title>
+		<link href="@src/todo2/css/main.css" rel="stylesheet" />
+	</head>
+	<body>
+		<h1>Todo2</h1>
+		<script src="@src/todo2/js/main.js" defer="defer"></script>
+	</body>
 </html>
