--- a/src/web-templates/todo1/detail-notfound.html
+++ b/src/web-templates/todo1/detail-notfound.html
@@ -4,8 +4,8 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Todo1</title>
-		<link href="@src/todo1/css/normalize.css" rel="stylesheet" />
-		<link href="@src/todo1/css/main.css" rel="stylesheet" />
+		<link href="css/normalize.css" rel="stylesheet" />
+		<link href="css/main.css" rel="stylesheet" />
 	</head>
 
 	<body>
@@ -20,6 +20,6 @@
 				</div>
 			</div>
 		</div>
-		<script src="@src/todo1/js/main.js" defer="defer"></script>
+		<script src="js/main.js" defer="defer"></script>
 	</body>
 </html>
